# subimage_feature

./: CMakeLists.txt  LICENSE  main.cpp
include/: subimage_feature.h
